# kevin_toolbox

./: .gitignore  LICENSE  README.md  git_push.sh  pack.py  pytest.ini  setup.cfg  setup.py  test.py
__learn/: dist_fo_torch.py  line_profiler.py  te2st_abcclass.py  te2st_dict.py  test_abcclass.py  test_consistency_of_block_matrix_multiplication.py  test_difference_between_tensor_and_Tensor.py  test_metaclass.py  test_os_chdir.py
__test/: __test2.py
kevin/dangerous/: README.md  dump_into_pickle_with_executor_attached.py
kevin/dangerous/test/: read_and_save_pickle.py  test_dangerous.py
kevin/data_flow/file/: test.py
kevin/data_flow/file/json_/: write_json.py
kevin/data_flow/file/kevin_notation/: README.md  converter.py  kevin_notation_reader.py  kevin_notation_writer.py
kevin/data_flow/reader/: file_iterative_reader.py  test_data.txt  unified_reader.py  unified_reader_base.py
kevin/developing/: executor.py  test.py
kevin/developing/design_pattern/producer_consumer/: consumer.py
kevin/developing/design_pattern/singleton/: singleton_for_uid.py
kevin/developing/notation/: README.md  __init__.py  converter.py  kevin_reader.py  kevin_writer.py  read.py  test.py  test.txt  test2.txt  write.py
kevin/developing/temperate/: __init__.py  my_list.py
kevin/developing/visualization/: multiple_axis.py
kevin/geometry/for_boxes/: boolean_algebra_for_boxes.py  cal_area_of_boxes.py  convert_boxes_from_coord_to_grid_index.py  detect_collision.py  detect_overlap.py  test.py
kevin/machine_learning/dataset/: test.py  test2.py
kevin/patches/for_test/: __init__.py  check_consistency.py  check_deviation.py
kevin/scientific_computing/utils/: __init__.py  convert_dtype.py  get_function_table_for_array_and_tensor.py
kevin_toolbox/: __init__.py
kevin_toolbox/dangerous/test/: test_dangerous.py
kevin_toolbox/developing/: README.md
kevin_toolbox/developing/file_management/: file_feature_extractor.py
kevin_toolbox/developing/photo_album_organization/: 0_group_by_timestamp.py  1_merge_folders.py  2_check_files.py
kevin_toolbox/developing/photo_organization/: split_by_date.py
kevin_toolbox/developing/todo/: file_management_utils.py
kevin_toolbox/geometry/: README.md
kevin_toolbox/nested_dict_list/: README.md  copy_.py
kevin_toolbox/nested_dict_list/serializer/: read.py  write.py
kevin_toolbox/nested_dict_list/test/: test_for_nested_dict_list.py  test_name_handler.py  test_nested_dict_list.py  test_nested_dict_list_2.py  test_nested_dict_list_bugfix.py  test_serializer.py  test_serializer_bugfix.py  test_value_parser.py
kevin_toolbox/network/test/: test_network.py
kevin_toolbox/patches/for_optuna/: README.md
kevin_toolbox/patches/for_os/: __init__.py  walk.py
kevin_toolbox/patches/for_test/: check_consistency.py
notes/: Disclaimer.md  Release_Record.md  TODO.md  User_Guide.md  math.dimension.md
(+283 files in other folders)
