[metadata]
name = kevin-toolbox
version = attr: kevin_toolbox.__version__
author = kevin hsu
author_email = xukaiming1996@163.com
keywords = mathematics, pytorch, numpy, machine-learning, algorithm

# add a description of your package
description = 一个常用的工具代码包集合
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/cantbeblank96/kevin_toolbox
download_url = https://github.com/username/your-package/archive/refs/tags/v1.0.0.tar.gz

# define your license and license file
license = MIT
license_files = LICENSE.txt

classifiers =
    # for a full list of classifiers see https://pypi.org/classifiers/
    # 许可证信息
    License :: OSI Approved :: MIT License
    # 目标 Python 版本
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
# 表明当前模块依赖哪些包，若环境中没有，则会从pypi中下载安装
install_requires =
    # list the dependencies required by your package
    torch>=1.2.0
    numpy>=1.19.0
# 依赖的python版本
python_requires = >=3.6
# 仅在测试时需要使用的依赖，在正常发布的代码中是没有用的。
# 在执行python setup.py test时，可以自动安装这三个库，确保测试的正常运行。
tests_require =
    # list the dependencies required by your package
    pytest>=6.2.5
    line-profiler>=3.5

# extras_require 这里仅表示该模块会依赖这些包
#   但是这些包通常不会使用到，只有当你深度使用模块时，才会用到，这里需要你手动安装
#   比如使用 pip install kevin_toolbox[test,plot] 命令进行安装，则会自动安装下面对应的包集合
[options.extras_require]
plot = matplotlib>=3.0
rest =
    pytest>=6.2.5
    line-profiler>=3.5